Fixed regression where pole flags did not change colors. Changed gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 [Oo]bj/
 [Bb]uild/
 [Bb]uilds/
+[Ll]ogs/
 Assets/AssetStoreTools*
 
 # Visual Studio cache directory
@@ -24,6 +25,7 @@ ExportedObj/
 *.pdb
 *.opendb
 *.VC.db
+*.idea
 
 # Unity3D generated meta files
 *.pidb.meta
